Added experience for Northrop Grumman and cut less relevant development topics

--- a/resume.tex
+++ b/resume.tex
@@ -62,8 +62,11 @@
 \section{ EXPERIENCE} {\sl  \includegraphics[scale=0.115, trim=10 10 25 25]{resume_images/Northrop_Grumman-2020-black-logo.jpeg}} \hfill April 2020 - Present \\
                 \textbf{Senior Principal Software Engineer} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-	         \item   Provided technical solutions and guidance for SecDevOps \newline
-                                with a team of engineers.
+	         \item   Provided technical solutions and guidance for DevSecOps.
+	         \item   Led outreach to development and administrative teams for \newline
+                                on-boarding to DevSecOps processes.
+                  \item   Led automation effort of automating manual processes through 
+                                scripting.
                 \end{itemize}
 
 
@@ -88,20 +91,23 @@
                               compliance (TLS, SSL, FIPS approved ciphers, certificates).
                 \end{itemize}
                 
+ \pagebreak
+ % SAIC logo included due to page break
+ {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}}  \newline
                 \textbf{Senior Software Engineer} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
 	      \item   Developed applications with a Severless architecture using AWS.
 	      \item   Developed a chef project for automated deployment of project \newline 
-                                code, reducing time required for pushes to production in 10 min.
+                                code, reducing time required for pushes to production to under 10 min.
 	      \item   Developed non-destructive install capability to retain data across\newline
                                versions (using Flyway, Windows Powershell, and Postgres). 
                 \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
                                regression testing.
                 \end{itemize}
  
-\pagebreak
+
 
 	%   ACCENTURE Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
@@ -112,15 +118,9 @@
                 \item   Developed a manifest upload and processing application for
                                the US Postal Service using Agile based methodologies including scrum.
                 \item   Leveraged Jenkins using Chef Ruby scripts and Vagrant\newline
-                               to automatically install and configure a server running on a VM
-	      \item   Developed code for consuming REST web services used
-                               in the file upload and processing application.
-	      \item   Developed scripts for automating deployments to IBM WebSphere
-                               using WebSphere’s Jython SOAP API to manage deployments.
+                               to automatically install and configure a server running on a VM.
 	      \item   Developed Flyway SQL scripts for updating and creating new 
                                records for supporting deployments.
-	      \item   Developed code for displaying data on uploaded and processed
-                               files using bootstrap javascript datatables.
                 \end{itemize}
 
 	%  ORACLE Experience
@@ -134,15 +134,6 @@
                                and set up a continuous integration server (Hudson)
                                for use with testing web code designed for a
                                highly available point of sale system. (NetApp)
-	      \item Independently developed a utility with custom Java code for use with
-                               Oracle Content DB for uploading of data, administration
-                               of Content DB, and parsing data.
-                               (US Forest Service)
-      	      \item Developed Java and web code in JSFFs using Oracle ADF for \newline
-                               consuming SOAP web services in a highly available system. \newline 
-                               (Oregon Health Care Exchange)
-	      \item Developed portlet code in JSP for an investor portal. \newline
-                               (Lincoln Financial)
 	      \item Presented training sessions on latest web application testing \newline
                                techniques.
                  \end{itemize} 
