Added AWS CDA certification.  Adjusted and trimmed experience descriptions.

--- a/resume.tex
+++ b/resume.tex
@@ -46,15 +46,13 @@
 
 \section{SYNOPSIS} {\sl Clearance :} Secret
 
-	       {\sl Languages :} Java, SQL, Javascript, Ruby
-
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
 			AWS, Docker, Node.js, React, Angular, Spring, PostgreSQL,\newline 
 			Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet, Selenium, Nexus,\newline
-			SonarQube, Selenium, JBoss, Apache, Tomcat, Linux, Windows,\newline
-			Mac OS X, Powershell, GIT, Agile, Scrum, Jira, Confluence\newline
+			SonarQube, Selenium, Tomcat, Apache, Kafka, Linux, Windows,\newline
+			Microservices, Powershell, GIT, Agile, Scrum, Jira, Confluence\newline
 
 %   NG Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
@@ -67,6 +65,7 @@
                                 on-boarding to DevSecOps processes.
                   \item   Led automation effort of automating manual processes through 
                                 scripting.
+                  \item   Provided solutions for an AWS environment.
                 \end{itemize}
 
 
@@ -115,9 +114,7 @@
 	      {\sl  \includegraphics[scale=0.1, trim=110 200 110 120]{resume_images/accenture-logo.jpg}} \hfill April 2014 - December 2014 \\
                 \textbf{Software Developer Specialist}
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-                \item   Developed a manifest upload and processing application for
-                               the US Postal Service using Agile based methodologies including scrum.
-                \item   Leveraged Jenkins using Chef Ruby scripts and Vagrant\newline
+                \item   Pioneered Jenkins using Chef Ruby scripts and Vagrant\newline
                                to automatically install and configure a server running on a VM.
 	      \item   Developed Flyway SQL scripts for updating and creating new 
                                records for supporting deployments.
@@ -127,9 +124,7 @@
                 {\sl \includegraphics[scale=0.1]{resume_images/663px-Oracle_logo.png}} \hfill            February 2011 - March 2014 \\
                 \textbf{Software Consultant}
                 \begin{itemize}  \itemsep -2pt %reduce space between items
-	      \item Developed custom web code in Java, Java Script, and JSP for \newline 
-                               updating an existing expense system to 11g technology using \newline 
-                               Oracle Access Manager. (US Census Bureau)
+	      \item Developed custom web code in Java, Java Script, and JSP.
 	      \item Developed a continuous testing system using Selenium
                                and set up a continuous integration server (Hudson)
                                for use with testing web code designed for a
@@ -168,7 +163,7 @@
 			   \parbox{\textwidth}{%
 			   \setlength\topsep{0pt} % removes the extra spaces created by the center environment
  			   \setlength\parskip{0pt}
-				\includegraphics[scale=0.45, trim=0 0 0 50]{resume_images/devops_institute.png}
+				\includegraphics[scale=0.45, trim=0 0 0 30]{resume_images/devops_institute.png}
 			}}}
 
 			{\makebox[0.55\columnwidth]{%
@@ -179,6 +174,24 @@
 			{\sl  DevOps Foundation} \newline
                 		DevOpsInstitute
 			
+			}}}
+ 		\end{multicols}
+		\begin{multicols}{2}
+			{\makebox[2\columnwidth]{%
+			   \parbox{\textwidth}{%
+			   \setlength\topsep{0pt} % removes the extra spaces created by the center environment
+ 			   \setlength\parskip{0pt}
+				\includegraphics[scale=0.27, trim=15 0 0 25]{resume_images/AWS-Developer-Associate-2020.png}
+			}}}
+
+			{\makebox[0.55\columnwidth]{%
+			   \parbox{1.0\textwidth}{%
+			   \setlength\topsep{0pt} % removes the extra spaces created by the center environment
+ 			   \setlength\parskip{0pt}
+			
+			{\sl  AWS Certified Developer - Associate} \newline
+                		Issued Dec 2020 Expires Dec 2023 \newline
+			Validation Number: H1VN45GDLJF4Q8CR
 			}}}
  		\end{multicols}
 
