Minor editing to highlight experience

--- a/resume.tex
+++ b/resume.tex
@@ -49,10 +49,11 @@
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
-			AWS, Docker, Node.js, React, Angular, Spring, PostgreSQL,\newline 
-			Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet, Selenium, Nexus,\newline
-			SonarQube, Selenium, Tomcat, Apache, Kafka, Linux, Windows,\newline
-			Microservices, Powershell, GIT, Agile, Scrum, Jira, Confluence\newline
+			AWS, Azure, Docker, Node.js, React, Angular, Spring,\newline 
+			PostgreSQL, Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet,\newline
+			Selenium, Nexus, SonarQube, Selenium, Tomcat, Apache, Kafka,\newline
+			Linux, Windows, Microservices, Powershell, GIT, Agile, Scrum,\newline
+			Jira, Confluence\newline
 
 %   NG Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
@@ -60,12 +61,13 @@
 \section{ EXPERIENCE} {\sl  \includegraphics[scale=0.115, trim=10 10 25 25]{resume_images/Northrop_Grumman-2020-black-logo.jpeg}} \hfill April 2020 - Present \\
                 \textbf{Senior Principal Software Engineer} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-	         \item   Provided technical solutions and guidance for DevSecOps.
+	         \item   Architected and developed DevSecOps solutions and guidance for
+	                       large programs.
 	         \item   Led outreach to development and administrative teams for \newline
                                 on-boarding to DevSecOps processes.
                   \item   Led automation effort of automating manual processes through 
                                 scripting.
-                  \item   Provided solutions for an AWS environment.
+                  \item   Architected and developed solutions for an AWS environment.
                 \end{itemize}
 
 
@@ -73,7 +75,7 @@
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - April 2020 \\
-                \textbf{DevOps Lead} 
+                \textbf{DevOps/Software Lead} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
 	      \item   Provided technical approaches and guidance for architecture \newline
                                 and security to a team of engineers.
@@ -97,7 +99,7 @@
                  \begin{itemize}  \itemsep -2pt % reduce space between items
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
-	      \item   Developed applications with a Severless architecture using AWS.
+	      \item   Developed applications using Severless architecture on AWS.
 	      \item   Developed a chef project for automated deployment of project \newline 
                                 code, reducing time required for pushes to production to under 10 min.
 	      \item   Developed non-destructive install capability to retain data across\newline
@@ -106,7 +108,7 @@
                                regression testing.
                 \end{itemize}
  
-
+% TODO - Remove Accenture and Oracle experience description for new certifications.
 
 	%   ACCENTURE Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
@@ -124,13 +126,11 @@
                 {\sl \includegraphics[scale=0.1]{resume_images/663px-Oracle_logo.png}} \hfill            February 2011 - March 2014 \\
                 \textbf{Software Consultant}
                 \begin{itemize}  \itemsep -2pt %reduce space between items
-	      \item Developed custom web code in Java, Java Script, and JSP.
 	      \item Developed a continuous testing system using Selenium
-                               and set up a continuous integration server (Hudson)
-                               for use with testing web code designed for a
-                               highly available point of sale system. (NetApp)
+                               and a continuous integration server (Hudson) for testing web code designed
+                               for a highly available point of sale system. (NetApp)
 	      \item Presented training sessions on latest web application testing \newline
-                               techniques.
+                               and development techniques.
                  \end{itemize} 
 
 \section{EDUCATION}
